force-app/main/default/objects/Budget_Item__c/fields/Budget_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouping</label>
    <referenceTo>Quote_Line_Group__c</referenceTo>
    <relationshipName>Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>