force-app/main/default/objects/Budget_Item__c/fields/CO_Total__c.field-meta.xml
<CustomField>
    <fullName>CO_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>It takes total from the change order</description>
    <label>CO Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>