force-app/main/default/objects/Budget_Item__c/fields/Direct_Costs__c.field-meta.xml
<CustomField>
    <fullName>Direct_Costs__c</fullName>
    <description>Sum of all New PO&apos;s</description>
    <inlineHelpText>Sum of all New PO&apos;s</inlineHelpText>
    <label>Direct Costs</label>
    <summarizedField>PO_Item_To_Budget_Item_Link__c.New_PO__c</summarizedField>
    <summaryForeignKey>PO_Item_To_Budget_Item_Link__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>