force-app/main/default/objects/Budget_Item__c/fields/Forecast_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Forecast_To_Complete__c</fullName>
    <inlineHelpText>Anticipated cost to Complete.</inlineHelpText>
    <label>Forecast To Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>