force-app/main/default/objects/Budget_Item__c/fields/Gross_Profit_Percemtage__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Percemtage__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Markup %</inlineHelpText>
    <label>Gross Profit (%) - DEP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>