force-app/main/default/objects/Budget_Item__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Budget_Line_Group__c</referenceTo>
    <relationshipName>Budget_Items</relationshipName>
    <type>Lookup</type>
</CustomField>