force-app/main/default/objects/Budget_Item__c/fields/Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Markup_Amount__c</fullName>
    <formula>Markup__c *  Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>