force-app/main/default/objects/Budget_Item__c/fields/Material_Budget__c.field-meta.xml
<CustomField>
    <fullName>Material_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Material Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>