force-app/main/default/objects/Budget_Item__c/fields/Misc_Budget__c.field-meta.xml
<CustomField>
    <fullName>Misc_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Misc. Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>