force-app/main/default/objects/Budget_Item__c/fields/Option_Amount__c.field-meta.xml
<CustomField>
    <fullName>Option_Amount__c</fullName>
    <label>Option Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>