force-app/main/default/objects/Budget_Item__c/fields/Proj_Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Proj_Profit_Loss__c</fullName>
    <formula>/*buildertek__Unit_Price__c  -  (buildertek__Projected_Costs__c -  (buildertek__Labor__c +  buildertek__Labor1__c))*/
/*buildertek__Sales_Price__c -  buildertek__Projected_Costs__c*/
Total_Sales_Price__c   -   Total_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Profit/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>