force-app/main/default/objects/Budget_Item__c/fields/Projected_Costs__c.field-meta.xml
<CustomField>
    <fullName>Projected_Costs__c</fullName>
    <formula>Pending_Cost_Changes__c + Forecast_To_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pending PO&apos;s + Forecast To Complete</inlineHelpText>
    <label>Projected Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>