force-app/main/default/objects/Budget_Item__c/fields/Sub_Contract__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>