force-app/main/default/objects/Budget_Item__c/fields/Total_Approvals_CO__c.field-meta.xml
<CustomField>
    <fullName>Total_Approvals_CO__c</fullName>
    <label>Approved CO&apos;s</label>
    <summarizedField>CO_Item_To_Budget_Item_Link__c.Total_Approvals_CO__c</summarizedField>
    <summaryForeignKey>CO_Item_To_Budget_Item_Link__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>