force-app/main/default/objects/Budget_Item__c/fields/Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs__c</fullName>
    <description>Committed Costs + Expenses + Invoices + Labor</description>
    <formula>Committed_Costs__c  +  Direct_Costs__c  +  Additional_Costs__c + Invoice_total__c +  Labor__c +  CO_Total__c + Option_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Committed Costs +  Direct Costs +  Additional Costs + Invoices + Labor</inlineHelpText>
    <label>Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>