force-app/main/default/objects/Budget_Item__c/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <formula>Original_Budget__c   +  Tax_Amount__c +  Additional_Fees__c +  Markup_Amount__c -  Discount_Amount__c +  Total_Approvals_CO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Original Budget   +  Tax Amount +  Additional Fees +  Markup Amount -  Discount Amount +  Appr CO</inlineHelpText>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>